@@ -230,6 +230,26 @@ format.
 .I \-f
 option, above.)
 .TP
+.BI -n \ nproc
+Execute in parallel on
+.I nproc
+local processes.
+This option is incompatible with
+.I \-P
+and
+.I \-PP,
+and is not currently supported with the
+.I \-I
+option.
+Multiple processes also do not work properly with ray tree output
+using any of the
+.I \-o*t*
+options.
+There is no benefit from specifying more processes than there are
+cores available on the system or the
+.I \-x
+setting, which forces a wait at each flush.
+.TP
 .BI -dj \ frac
 Set the direct jittering to
 .I frac.
