@@ -188,6 +188,16 @@ eputs(				/* put string to stderr */
 }
 
 
+void
+quit(ec)			/* make sure exit is called */
+int	ec;
+{
+	if (ray_pnprocs > 0)	/* close children if any */
+		ray_pclose(0);		
+	exit(ec);
+}
+
+
 static void
 setdefaults(void)			/* set default values */
 {
